--- a/timeseries dingling air quality analysis.ipynb
+++ b/timeseries dingling air quality analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "abac9d6f",
    "metadata": {},
    "outputs": [],
@@ -17,19 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "7bc4adbd",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "#importing files in the csv formart\n",
     "df_ding = pd.read_csv(\"PRSA_Data_Dingling_20130301-20170228.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "69c49b85",
    "metadata": {},
    "outputs": [
@@ -200,7 +201,7 @@
        "4  1022.3 -19.4   0.0    N   2.1  Dingling  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "de4ea05d",
    "metadata": {},
    "outputs": [
@@ -221,7 +222,7 @@
        "(35064, 18)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "6c2daf85",
    "metadata": {},
    "outputs": [
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "40ab1271",
    "metadata": {},
    "outputs": [],
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "fefdc5be",
    "metadata": {},
    "outputs": [
@@ -294,10 +295,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_26388\\245438062.py:1: FutureWarning: \n",
-      "        Use pd.to_datetime instead.\n",
-      "\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_32440\\245438062.py:1: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
       "  df_din = pd.read_csv(\"PRSA_Data_Dingling_20130301-20170228.csv\",parse_dates = [['year','month','day','hour']], date_parser = convert_to_date, keep_date_col =True)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "convert_to_date() missing 3 required positional arguments: 'month', 'day', and 'hour'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\base_parser.py:1176\u001b[0m, in \u001b[0;36m_make_date_converter.<locals>.converter\u001b[1;34m(col, *date_cols)\u001b[0m\n\u001b[0;32m   1169\u001b[0m     warnings\u001b[39m.\u001b[39mfilterwarnings(\n\u001b[0;32m   1170\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1171\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m.*parsing datetimes with mixed time zones \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1172\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mwill raise a warning\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1173\u001b[0m         category\u001b[39m=\u001b[39m\u001b[39mFutureWarning\u001b[39;00m,\n\u001b[0;32m   1174\u001b[0m     )\n\u001b[0;32m   1175\u001b[0m     result \u001b[39m=\u001b[39m tools\u001b[39m.\u001b[39mto_datetime(\n\u001b[1;32m-> 1176\u001b[0m         date_parser(\n\u001b[0;32m   1177\u001b[0m             \u001b[39m*\u001b[39;49m(unpack_if_single_element(arg) \u001b[39mfor\u001b[39;49;00m arg \u001b[39min\u001b[39;49;00m date_cols)\n\u001b[0;32m   1178\u001b[0m         ),\n\u001b[0;32m   1179\u001b[0m         errors\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1180\u001b[0m         cache\u001b[39m=\u001b[39mcache_dates,\n\u001b[0;32m   1181\u001b[0m     )\n\u001b[0;32m   1182\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(result, datetime\u001b[39m.\u001b[39mdatetime):\n",
+      "\u001b[1;32mc:\\Users\\User\\career readiness\\CLONES\\dingAQtimeseries\\Time-Series-Analysis\\timeseries dingling air quality analysis.ipynb Cell 7\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/User/career%20readiness/CLONES/dingAQtimeseries/Time-Series-Analysis/timeseries%20dingling%20air%20quality%20analysis.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mconvert_to_date\u001b[39m(year, month, day, hour):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/User/career%20readiness/CLONES/dingAQtimeseries/Time-Series-Analysis/timeseries%20dingling%20air%20quality%20analysis.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m datetime(\u001b[39mint\u001b[39;49m(year), \u001b[39mint\u001b[39m(month), \u001b[39mint\u001b[39m(day), \u001b[39mint\u001b[39m(hour))\n",
+      "\u001b[1;31mTypeError\u001b[0m: only length-1 arrays can be converted to Python scalars",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\User\\career readiness\\CLONES\\dingAQtimeseries\\Time-Series-Analysis\\timeseries dingling air quality analysis.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/User/career%20readiness/CLONES/dingAQtimeseries/Time-Series-Analysis/timeseries%20dingling%20air%20quality%20analysis.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df_din \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_csv(\u001b[39m\"\u001b[39;49m\u001b[39mPRSA_Data_Dingling_20130301-20170228.csv\u001b[39;49m\u001b[39m\"\u001b[39;49m,parse_dates \u001b[39m=\u001b[39;49m [[\u001b[39m'\u001b[39;49m\u001b[39myear\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mmonth\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mday\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mhour\u001b[39;49m\u001b[39m'\u001b[39;49m]], date_parser \u001b[39m=\u001b[39;49m convert_to_date, keep_date_col \u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:948\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m    935\u001b[0m kwds_defaults \u001b[39m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m    936\u001b[0m     dialect,\n\u001b[0;32m    937\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    944\u001b[0m     dtype_backend\u001b[39m=\u001b[39mdtype_backend,\n\u001b[0;32m    945\u001b[0m )\n\u001b[0;32m    946\u001b[0m kwds\u001b[39m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m--> 948\u001b[0m \u001b[39mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:617\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    614\u001b[0m     \u001b[39mreturn\u001b[39;00m parser\n\u001b[0;32m    616\u001b[0m \u001b[39mwith\u001b[39;00m parser:\n\u001b[1;32m--> 617\u001b[0m     \u001b[39mreturn\u001b[39;00m parser\u001b[39m.\u001b[39;49mread(nrows)\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1748\u001b[0m, in \u001b[0;36mTextFileReader.read\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m   1741\u001b[0m nrows \u001b[39m=\u001b[39m validate_integer(\u001b[39m\"\u001b[39m\u001b[39mnrows\u001b[39m\u001b[39m\"\u001b[39m, nrows)\n\u001b[0;32m   1742\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m   1743\u001b[0m     \u001b[39m# error: \"ParserBase\" has no attribute \"read\"\u001b[39;00m\n\u001b[0;32m   1744\u001b[0m     (\n\u001b[0;32m   1745\u001b[0m         index,\n\u001b[0;32m   1746\u001b[0m         columns,\n\u001b[0;32m   1747\u001b[0m         col_dict,\n\u001b[1;32m-> 1748\u001b[0m     ) \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mread(  \u001b[39m# type: ignore[attr-defined]\u001b[39;49;00m\n\u001b[0;32m   1749\u001b[0m         nrows\n\u001b[0;32m   1750\u001b[0m     )\n\u001b[0;32m   1751\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[0;32m   1752\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclose()\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\c_parser_wrapper.py:332\u001b[0m, in \u001b[0;36mCParserWrapper.read\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m    328\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_data_length(names, alldata)\n\u001b[0;32m    330\u001b[0m     data \u001b[39m=\u001b[39m {k: v \u001b[39mfor\u001b[39;00m k, (i, v) \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(names, data_tups)}\n\u001b[1;32m--> 332\u001b[0m     names, date_data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_do_date_conversions(names, data)\n\u001b[0;32m    333\u001b[0m     index, column_names \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_make_index(date_data, alldata, names)\n\u001b[0;32m    335\u001b[0m \u001b[39mreturn\u001b[39;00m index, column_names, date_data\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\base_parser.py:870\u001b[0m, in \u001b[0;36mParserBase._do_date_conversions\u001b[1;34m(self, names, data)\u001b[0m\n\u001b[0;32m    861\u001b[0m \u001b[39m@final\u001b[39m\n\u001b[0;32m    862\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_do_date_conversions\u001b[39m(\n\u001b[0;32m    863\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    866\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mtuple\u001b[39m[Sequence[Hashable] \u001b[39m|\u001b[39m Index, Mapping[Hashable, ArrayLike] \u001b[39m|\u001b[39m DataFrame]:\n\u001b[0;32m    867\u001b[0m     \u001b[39m# returns data, columns\u001b[39;00m\n\u001b[0;32m    869\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mparse_dates \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 870\u001b[0m         data, names \u001b[39m=\u001b[39m _process_date_conversion(\n\u001b[0;32m    871\u001b[0m             data,\n\u001b[0;32m    872\u001b[0m             \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_date_conv,\n\u001b[0;32m    873\u001b[0m             \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mparse_dates,\n\u001b[0;32m    874\u001b[0m             \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mindex_col,\n\u001b[0;32m    875\u001b[0m             \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mindex_names,\n\u001b[0;32m    876\u001b[0m             names,\n\u001b[0;32m    877\u001b[0m             keep_date_col\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mkeep_date_col,\n\u001b[0;32m    878\u001b[0m             dtype_backend\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdtype_backend,\n\u001b[0;32m    879\u001b[0m         )\n\u001b[0;32m    881\u001b[0m     \u001b[39mreturn\u001b[39;00m names, data\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\base_parser.py:1297\u001b[0m, in \u001b[0;36m_process_date_conversion\u001b[1;34m(data_dict, converter, parse_spec, index_col, index_names, columns, keep_date_col, dtype_backend)\u001b[0m\n\u001b[0;32m   1293\u001b[0m     data_dict[colspec] \u001b[39m=\u001b[39m converter(\n\u001b[0;32m   1294\u001b[0m         np\u001b[39m.\u001b[39masarray(data_dict[colspec]), col\u001b[39m=\u001b[39mcolspec\n\u001b[0;32m   1295\u001b[0m     )\n\u001b[0;32m   1296\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 1297\u001b[0m     new_name, col, old_names \u001b[39m=\u001b[39m _try_convert_dates(\n\u001b[0;32m   1298\u001b[0m         converter, colspec, data_dict, orig_names\n\u001b[0;32m   1299\u001b[0m     )\n\u001b[0;32m   1300\u001b[0m     \u001b[39mif\u001b[39;00m new_name \u001b[39min\u001b[39;00m data_dict:\n\u001b[0;32m   1301\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNew date column already in dict \u001b[39m\u001b[39m{\u001b[39;00mnew_name\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\base_parser.py:1365\u001b[0m, in \u001b[0;36m_try_convert_dates\u001b[1;34m(parser, colspec, data_dict, columns, target_name)\u001b[0m\n\u001b[0;32m   1362\u001b[0m     new_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin([\u001b[39mstr\u001b[39m(x) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m colnames])\n\u001b[0;32m   1363\u001b[0m to_parse \u001b[39m=\u001b[39m [np\u001b[39m.\u001b[39masarray(data_dict[c]) \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m colnames \u001b[39mif\u001b[39;00m c \u001b[39min\u001b[39;00m data_dict]\n\u001b[1;32m-> 1365\u001b[0m new_col \u001b[39m=\u001b[39m parser(\u001b[39m*\u001b[39;49mto_parse, col\u001b[39m=\u001b[39;49mnew_name \u001b[39mif\u001b[39;49;00m target_name \u001b[39mis\u001b[39;49;00m \u001b[39mNone\u001b[39;49;00m \u001b[39melse\u001b[39;49;00m target_name)\n\u001b[0;32m   1366\u001b[0m \u001b[39mreturn\u001b[39;00m new_name, new_col, colnames\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\base_parser.py:1194\u001b[0m, in \u001b[0;36m_make_date_converter.<locals>.converter\u001b[1;34m(col, *date_cols)\u001b[0m\n\u001b[0;32m   1186\u001b[0m \u001b[39mwith\u001b[39;00m warnings\u001b[39m.\u001b[39mcatch_warnings():\n\u001b[0;32m   1187\u001b[0m     warnings\u001b[39m.\u001b[39mfilterwarnings(\n\u001b[0;32m   1188\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1189\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m.*parsing datetimes with mixed time zones \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1190\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mwill raise a warning\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1191\u001b[0m         category\u001b[39m=\u001b[39m\u001b[39mFutureWarning\u001b[39;00m,\n\u001b[0;32m   1192\u001b[0m     )\n\u001b[0;32m   1193\u001b[0m     \u001b[39mreturn\u001b[39;00m tools\u001b[39m.\u001b[39mto_datetime(\n\u001b[1;32m-> 1194\u001b[0m         parsing\u001b[39m.\u001b[39;49mtry_parse_dates(\n\u001b[0;32m   1195\u001b[0m             parsing\u001b[39m.\u001b[39;49mconcat_date_cols(date_cols),\n\u001b[0;32m   1196\u001b[0m             parser\u001b[39m=\u001b[39;49mdate_parser,\n\u001b[0;32m   1197\u001b[0m         ),\n\u001b[0;32m   1198\u001b[0m         errors\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1199\u001b[0m     )\n",
+      "File \u001b[1;32mparsing.pyx:764\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.parsing.try_parse_dates\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: convert_to_date() missing 3 required positional arguments: 'month', 'day', and 'hour'"
      ]
     }
    ],
@@ -307,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "de1ddaf3",
    "metadata": {},
    "outputs": [
@@ -495,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "d55c10cc",
    "metadata": {},
    "outputs": [
@@ -538,17 +562,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "cc430270",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_din' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\User\\career readiness\\CLONES\\dingAQtimeseries\\Time-Series-Analysis\\timeseries dingling air quality analysis.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/User/career%20readiness/CLONES/dingAQtimeseries/Time-Series-Analysis/timeseries%20dingling%20air%20quality%20analysis.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df_din[\u001b[39m'\u001b[39m\u001b[39mmonth\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mto_numeric(df_din[\u001b[39m'\u001b[39m\u001b[39mmonth\u001b[39m\u001b[39m'\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_din' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df_din['month'] = pd.to_numeric(df_din['month'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "a7b7ece9",
    "metadata": {},
    "outputs": [
@@ -617,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "ad11cadc",
    "metadata": {},
    "outputs": [
@@ -833,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "71410303",
    "metadata": {},
    "outputs": [],
@@ -843,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "b1cd394f",
    "metadata": {},
    "outputs": [],
@@ -853,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "96e063c7",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "65427b83",
    "metadata": {},
    "outputs": [],
@@ -1083,7 +1119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
